infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studypro-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.studypro.com.br
      secretName: studypro-tls
  rules:
    - host: api.studypro.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studypro-api
                port:
                  number: 80
